--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
   },
   "dependencies": {
     "prop-types": "^15.6.2",
-    "react-native-animatable": "1.3.3"
+    "react-native-animatable": "1.3.3",
+    "react-native-modal": "https://github.com/hellodigit/react-native-modal"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
